# Euler-Sweep

./: CMakeLists.txt  README.md  main.cpp
include/: Brep.h  EulerOperation.h  geometry.h  sweep.h  utils.h
src/: Brep.cpp  CMakeLists.txt  EulerOperation.cpp  geometry.cpp  sweep.cpp  utils.cpp
tests/: CMakeLists.txt  testEuler.cpp
